--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   - name: Rust Release binary
   # You may pin to the exact commit or the version.
   # uses: rust-build/rust-build.action@7d5b0c135ddb825f7692d4d2d75e598184d15cec
-  - uses: rust-build/rust-build.action@v1.4.3
+    uses: rust-build/rust-build.action@v1.4.3
     with:
     # Output target
       RUSTTARGET: windows-latest
