--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     uses: rust-build/rust-build.action@v1.4.3
     with:
     # Output target
-      RUSTTARGET: windows-latest
+      RUSTTARGET: x86_64-pc-windows-gnu
     # List of extra files to include in build
       EXTRA_FILES: # optional
     # Path to directory containing Cargo.toml (defaults to project root)
