--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,29 @@
-name: release
-on: [release]
+on:
+  release:
+    types: [created]
+  push:
+
 
 jobs:
-  build:
-  - name: Rust Release binary
-  # You may pin to the exact commit or the version.
-  # uses: rust-build/rust-build.action@7d5b0c135ddb825f7692d4d2d75e598184d15cec
-    uses: rust-build/rust-build.action@v1.4.3
-    with:
-    # Output target
-      RUSTTARGET: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
-    # List of extra files to include in build
-      EXTRA_FILES: # optional
-    # Path to directory containing Cargo.toml (defaults to project root)
-      SRC_DIR: # optional
-    # List of archive types to publish the binaries with, default "zip", supports zip and all tar formats
-      ARCHIVE_TYPES: # optional
-    # Full name of archive to upload (you must specify file extension and change this if building multiple targets)
-      ARCHIVE_NAME: # optional
-    # Relative path of script to run before building
-      PRE_BUILD: # optional
-    # Relative path of script to run after building
-      POST_BUILD: # optional
-    # If set to "true", the resulting binary will be stripped and compressed by UPX. ("false" by default)
-      MINIFY: # optional
-    # The rust toolchain version to use (see https://rust-lang.github.io/rustup/concepts/toolchains.html#toolchain-specification)
-      TOOLCHAIN_VERSION: # optional
-    # What method to use to upload compiled binaries, supported values: (release, none), default: release
-      UPLOAD_MODE: # optional
+  release:
+    name: release 
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz
+    steps:
+      - uses: actions/checkout@Valve_Control
+      - name: Compile and release
+        uses: rust-build/rust-build.action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
+
     
