--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
           - target: x86_64-unknown-linux-musl
             archive: tar.gz
     steps:
-      - uses: actions/checkout@Valve_Control
+      - uses: actions/checkout@v0
       - name: Compile and release
         uses: rust-build/rust-build.action@master
         env:
