--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,15 @@ jobs:
           - target: x86_64-unknown-linux-musl
             archive: tar.gz
     steps:
-      - uses: actions/checkout@v0
+      - uses: actions/checkout@v3
       - name: Compile and release
-        uses: rust-build/rust-build.action@master
+        uses: rust-build/rust-build.action@Valve_Control
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+      - name: Find output
+        run: ls -l
 
     
