--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,25 +7,45 @@ on:
 jobs:
   release:
     name: release 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
         include:
           - target: x86_64-pc-windows-gnu
             archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz
     steps:
-      - uses: actions/checkout@v3
-      - name: Compile and release
-        uses: rust-build/rust-build.action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          RUSTTARGET: ${{ matrix.target }}
-          ARCHIVE_TYPES: ${{ matrix.archive }}
-      - name: Find output
-        run: ls -l
+        - uses: actions/checkout@v3
+        - name: Compile and release
+          uses: rust-build/rust-build.action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            RUSTTARGET: ${{ matrix.target }}
+            ARCHIVE_TYPES: ${{ matrix.archive }}
+        - name: Find output
+          run: ls -l
+
+            
+  release1:
+      name: releaseubuntu
+      runs-on: ubuntu-latest
+      strategy:
+        fail-fast: false
+        matrix:
+          include:
+            - target: x86_64-unknown-linux-musl
+              archive: tar.gz
+      steps:
+        - uses: actions/checkout@v3
+        - name: Compile and release
+          uses: rust-build/rust-build.action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            RUSTTARGET: ${{ matrix.target }}
+            ARCHIVE_TYPES: ${{ matrix.archive }}
+        - name: Find output
+          run: ls -l
 
     
